k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasks
spec:
  selector:
    app: tasks
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
