k8s/base/netpol-allow-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tasks-allow-api
spec:
  podSelector:
    matchLabels:
      app: tasks
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 8000
